[package]
name = "yumeframe"
version = "0.3.0"
description = "YumeFrame is a desktop companion app for Warframe focused on inventory progress, crafting decisions, relic value planning, and worldstate insights."
authors = ["Yumeo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yumeframe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9.3"
image = "0.25"
imageproc = "0.26"
ocr_rs = { package = "ocr-rs", git = "https://github.com/zibo-chen/rust-paddle-ocr.git" }
global-hotkey = "0.7.0"

# Warframe API helper dependencies
sysinfo = "0.38"
read-process-memory = "0.1"
reqwest = { version = "0.13", features = ["blocking"] }
lzma-rs = "0.3"
tokio = { version = "1", features = ["rt", "sync"] }
directories = "6"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "handleapi", "winnt", "errhandlingapi"] }

